--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>mojo-parent</artifactId>
@@ -9,7 +8,7 @@
   <artifactId>aspectj-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>AspectJ compiler Maven Plugin</name>
-  <version>1.4-SNAPSHOT</version>
+  <version>1.3.1</version>
   <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
   <inceptionYear>2005</inceptionYear>
   <properties>
@@ -18,9 +17,9 @@
     <aspectj.version>1.6.10</aspectj.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</developerConnection>
-    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/aspectj-maven-plugin</url>
+    <connection>scm:svn:http://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.3.1</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.3.1</developerConnection>
+    <url>http://fisheye.codehaus.org/browse/mojo/tags/aspectj-maven-plugin-1.3.1</url>
   </scm>
   <description>
       Handles AspectJ usage within maven.
