--- a/src/it/JavaSourcesList/pom.xml
+++ b/src/it/JavaSourcesList/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.aspectj.it</groupId>
-  <artifactId>inclusions-fullclassname</artifactId>
+  <artifactId>javasources-list</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
   <dependencies>
