--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <!-- NOTE: If the AspectJ dependencies are updated, be sure to update 
       the tests CompilerMojoTestBase and AjcReportMojoTest as well! -->
     <aspectjVersion>1.6.10</aspectjVersion>
-    <mavenVersion>2.0</mavenVersion>
+    <mavenVersion>2.0.6</mavenVersion> <!-- due to plex utils 1.5.6 -->
   </properties>
 
   <scm>
@@ -30,7 +30,7 @@
   </description>
 
   <prerequisites>
-    <maven>2.0.6</maven> <!-- due to plex utils 1.5.6 -->
+    <maven>${mavenVersion}</maven> 
   </prerequisites>
 
   <ciManagement>
@@ -195,6 +195,11 @@
   <dependencies>
     <!-- Maven core -->
     <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>2.0.5</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-artifact</artifactId>
       <version>${mavenVersion}</version>
@@ -229,27 +234,10 @@
       <artifactId>aspectjtools</artifactId>
       <version>${aspectjVersion}</version>
     </dependency>
-    <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-utils</artifactId>
-      <version>2.0.5</version>
-    </dependency>
     <!-- Test -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.aspectj</groupId>
-      <artifactId>aspectjrt</artifactId>
-      <version>${aspectjVersion}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-embedder</artifactId>
-      <version>2.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
