--- a/pom.xml
+++ b/pom.xml
@@ -219,11 +219,12 @@
       <artifactId>maven-reporting-api</artifactId>
       <version>${mavenVersion}</version>
     </dependency>
-    <!-- Other -->
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
+      <version>${mavenVersion}</version>
     </dependency>
+    <!-- Other -->
     <dependency>
       <groupId>org.apache.maven.reporting</groupId>
       <artifactId>maven-reporting-impl</artifactId>
