--- a/src/it/CreateSite/pom.xml
+++ b/src/it/CreateSite/pom.xml
@@ -21,6 +21,11 @@
         <version>2.3.2</version>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.0</version>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>aspectj-maven-plugin</artifactId>
         <version>@project.version@</version>
