--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
   <properties>
     <aspectjVersion>1.6.11</aspectjVersion>
-    <mavenVersion>2.0.6</mavenVersion> <!-- due to plex utils 1.5.6 -->
+    <mavenVersion>2.2.0</mavenVersion>
   </properties>
 
   <scm>
@@ -23,7 +23,7 @@
     <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/aspectj-maven-plugin</url>
   </scm>
   <description>
-      Handles AspectJ usage within maven.
+      Handles AspectJ usage within Maven.
       Functionality provided is: weaving of aspects (or existing aspects from libraries) with the test and/or main classes, weaving of pre-existing jars and ajdoc reporting.
   </description>
 
