--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,11 @@
     </dependency>
     <!-- Other -->
     <dependency>
+      <groupId>org.apache.maven.doxia</groupId>
+      <artifactId>doxia-site-renderer</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven.reporting</groupId>
       <artifactId>maven-reporting-impl</artifactId>
       <version>2.1</version>
