--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,15 @@
   </licenses>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-changes-plugin</artifactId>
+          <version>2.6</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -260,18 +269,23 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
-        <version>2.3</version>
+        <version>2.6</version>
         <configuration>
-          <urlDownload>${project.url}</urlDownload>
-          <columnNames>Key,Summary,Status,Resolution,Assignee,Type,Version,Fix
-            Version</columnNames>
+          <columnNames>Type,Key,Summary,Assignee,Status,Resolution,Created</columnNames>
           <generateJiraAnnouncement>true</generateJiraAnnouncement>
+          <issueTypes>
+            <Task>update</Task>
+          </issueTypes>
+          <maxEntries>200</maxEntries>
+          <onlyCurrentVersion>true</onlyCurrentVersion>
+          <sortColumnNames>Type,Key</sortColumnNames>
           <toAddresses>
             <toAddress>dev@mojo.codehaus.org</toAddress>
             <toAddress>user@mojo.codehaus.org</toAddress>
             <toAddress>users@maven.apache.org</toAddress>
             <toAddress>aspectj-users@eclipse.org</toAddress>
           </toAddresses>
+          <urlDownload>${project.url}</urlDownload>
         </configuration>
       </plugin>
       <plugin>
