--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>aspectj-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>AspectJ compiler Maven Plugin</name>
-  <version>1.4</version>
+  <version>1.5-SNAPSHOT</version>
   <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
   <inceptionYear>2005</inceptionYear>
 
@@ -18,9 +18,9 @@
   </properties>
 
   <scm>
-    <connection>scm:svn:http://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.4</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.4</developerConnection>
-    <url>http://fisheye.codehaus.org/browse/mojo/tags/aspectj-maven-plugin-1.4</url>
+    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</developerConnection>
+    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/aspectj-maven-plugin</url>
   </scm>
   <description>
       Handles AspectJ usage within Maven.
