--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>mojo-parent</artifactId>
@@ -13,27 +14,30 @@
   <inceptionYear>2005</inceptionYear>
 
   <properties>
-    <aspectjVersion>1.7.2</aspectjVersion>
+    <aspectjVersion>1.7.3</aspectjVersion>
     <mavenVersion>2.2.1</mavenVersion>
+    <changesPluginVersion>2.9</changesPluginVersion>
   </properties>
 
   <scm>
     <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</developerConnection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/
+    </developerConnection>
     <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/aspectj-maven-plugin</url>
   </scm>
   <description>
-      Handles AspectJ usage within Maven.
-      Functionality provided is: weaving of aspects (or existing aspects from libraries) with the test and/or main classes, weaving of pre-existing jars and ajdoc reporting.
+    Handles AspectJ usage within Maven.
+    Functionality provided is: weaving of aspects (or existing aspects from libraries) with the
+    test and/or main classes, weaving of pre-existing jars and ajdoc reporting.
   </description>
 
   <prerequisites>
-    <maven>${mavenVersion}</maven> 
+    <maven>${mavenVersion}</maven>
   </prerequisites>
 
   <ciManagement>
-    <system>hudson</system>
-    <url>http://www.davidkarlsen.com/hudson/</url>
+    <system>bamboo</system>
+    <url>http://bamboo-ci.codehaus.org/browse/MOJO-MASPECTJ</url>
     <notifiers>
       <notifier>
         <type>mail</type>
@@ -61,6 +65,11 @@
       <roles>
         <role>Java Developer</role>
       </roles>
+      <timezone>+1</timezone>
+    </developer>
+    <developer>
+      <name>Lennart Jörelid</name>
+      <email>lj@jguru.se</email>
       <timezone>+1</timezone>
     </developer>
   </developers>
@@ -109,7 +118,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-changes-plugin</artifactId>
-          <version>2.6</version>
+          <version>${changesPluginVersion}</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -122,7 +131,7 @@
             <exclude>**/test-project/**/*.java</exclude>
             <exclude>
               **/parent-child-test-project/**/*.java
-                        </exclude>
+            </exclude>
             <exclude>**/AbstractAjcMojoTest.java</exclude>
           </excludes>
         </configuration>
@@ -130,7 +139,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-invoker-plugin</artifactId>
-        <version>1.5</version>
         <executions>
           <execution>
             <id>integration-test</id>
@@ -157,26 +165,35 @@
   </build>
 
   <profiles>
+    <!--
+      The AspectJ compilation requires that tools.jar (or its equivalent for some JDKs) is found on the classpath.
+      The profiles named [something]toolsJar-profile define the systemPath for the tools.jar dependency.
+    -->
     <profile>
-      <id>default-tools.jar</id>
+      <id>standardToolsJar-profile</id>
       <activation>
-        <property>
-          <name>java.vendor</name>
-          <value>Sun Microsystems Inc.</value>
-        </property>
+        <activeByDefault>true</activeByDefault>
+        <file>
+          <exists>${java.home}/../lib/tools.jar</exists>
+        </file>
       </activation>
-      <dependencies>
-        <dependency>
-          <groupId>com.sun</groupId>
-          <artifactId>tools</artifactId>
-          <version>1.4.2</version>
-          <scope>system</scope>
-          <systemPath>
-                        ${java.home}/../lib/tools.jar
-                    </systemPath>
-        </dependency>
-      </dependencies>
+      <properties>
+        <toolsjarSystemPath>${java.home}/../lib/tools.jar</toolsjarSystemPath>
+      </properties>
     </profile>
+    <profile>
+      <id>appleJdkToolsJar-profile</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+        <file>
+          <exists>${java.home}/../Classes/classes.jar</exists>
+        </file>
+      </activation>
+      <properties>
+        <toolsjarSystemPath>${java.home}/../Classes/classes.jar</toolsjarSystemPath>
+      </properties>
+    </profile>
+
     <profile>
       <id>maven-repo-local</id>
       <activation>
@@ -191,7 +208,7 @@
             <configuration>
               <systemProperties>
                 <property>
-                  <!-- Pass this through to the tests (if set!) to have them 
+                  <!-- Pass this through to the tests (if set!) to have them
                     pick the right repository -->
                   <name>maven.repo.local</name>
                   <value>${maven.repo.local}</value>
@@ -252,6 +269,13 @@
       <artifactId>aspectjtools</artifactId>
       <version>${aspectjVersion}</version>
     </dependency>
+    <dependency>
+      <groupId>com.sun</groupId>
+      <artifactId>tools</artifactId>
+      <version>${java.version}</version>
+      <scope>system</scope>
+      <systemPath>${toolsjarSystemPath}</systemPath>
+    </dependency>
     <!-- Test -->
     <dependency>
       <groupId>junit</groupId>
@@ -274,7 +298,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
-        <version>2.9</version>
+        <version>${changesPluginVersion}</version>
         <configuration>
           <columnNames>Type,Key,Summary,Assignee,Status,Resolution,Created</columnNames>
           <generateJiraAnnouncement>true</generateJiraAnnouncement>
@@ -296,7 +320,6 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>l10n-maven-plugin</artifactId>
-        <version>1.0-alpha-2</version>
         <configuration>
           <locales>
             <locale>nl</locale>
