--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,33 @@
           <debug>true</debug>
         </configuration>
       </plugin>
+
+      <!--
+        Provides PlantUML integration into site deployments.
+      -->
+      <plugin>
+        <groupId>com.github.jeluard</groupId>
+        <artifactId>plantuml-maven-plugin</artifactId>
+        <version>7954</version>
+        <configuration>
+          <sourceFiles>
+            <directory>${basedir}</directory>
+            <includes>
+              <include>src/site/**/*.puml</include>
+            </includes>
+          </sourceFiles>
+          <outputDirectory>${project.build.directory}/site/images/plantuml</outputDirectory>
+        </configuration>
+        <executions>
+          <execution>
+            <id>generate-plantuml-diagrams</id>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <phase>pre-site</phase>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
