--- a/pom.xml
+++ b/pom.xml
@@ -347,6 +347,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>l10n-maven-plugin</artifactId>
+        <version>1.0-alpha-2</version>
         <configuration>
           <locales>
             <locale>nl</locale>
