--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>mojo-parent</artifactId>
@@ -9,7 +8,7 @@
   <artifactId>aspectj-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>AspectJ compiler Maven Plugin</name>
-  <version>1.6-SNAPSHOT</version>
+  <version>1.6</version>
   <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
   <inceptionYear>2005</inceptionYear>
 
@@ -20,10 +19,10 @@
   </properties>
 
   <scm>
-    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/
+    <connection>scm:svn:http://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.6</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.6
     </developerConnection>
-    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/aspectj-maven-plugin</url>
+    <url>http://fisheye.codehaus.org/browse/mojo/tags/aspectj-maven-plugin-1.6</url>
   </scm>
   <description>
     Handles AspectJ usage within Maven.
