--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,33 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>mojo-parent</artifactId>
     <version>32</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
+
   <artifactId>aspectj-maven-plugin</artifactId>
-  <packaging>maven-plugin</packaging>
-  <name>AspectJ compiler Maven Plugin</name>
   <version>1.7-SNAPSHOT</version>
+  <packaging>maven-plugin</packaging>
+
+  <name>AspectJ compiler Maven Plugin</name>
+  <description>
+    Handles AspectJ usage within Maven.
+    Functionality provided is: weaving of aspects (or existing aspects from libraries) with the
+    test and/or main classes, weaving of pre-existing jars and ajdoc reporting.
+  </description>
   <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
   <inceptionYear>2005</inceptionYear>
+  <licenses>
+    <license>
+      <name>The MIT License</name>
+      <url>LICENSE.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
   <properties>
     <aspectjVersion>1.7.4</aspectjVersion>
@@ -18,22 +35,19 @@
     <changesPluginVersion>2.9</changesPluginVersion>
   </properties>
 
-  <scm>
-    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/
-    </developerConnection>
-    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/aspectj-maven-plugin</url>
-  </scm>
-  <description>
-    Handles AspectJ usage within Maven.
-    Functionality provided is: weaving of aspects (or existing aspects from libraries) with the
-    test and/or main classes, weaving of pre-existing jars and ajdoc reporting.
-  </description>
-
   <prerequisites>
     <maven>${mavenVersion}</maven>
   </prerequisites>
 
+  <scm>
+    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/aspectj-maven-plugin/</developerConnection>
+    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/aspectj-maven-plugin</url>
+  </scm>
+  <issueManagement>
+    <system>jira</system>
+    <url>http://jira.codehaus.org/browse/MASPECTJ</url>
+  </issueManagement>
   <ciManagement>
     <system>bamboo</system>
     <url>http://bamboo-ci.codehaus.org/browse/MOJO-MASPECTJ</url>
@@ -50,10 +64,7 @@
       </notifier>
     </notifiers>
   </ciManagement>
-  <issueManagement>
-    <system>jira</system>
-    <url>http://jira.codehaus.org/browse/MASPECTJ</url>
-  </issueManagement>
+
   <developers>
     <developer>
       <id>kaare</id>
@@ -107,171 +118,6 @@
       <timezone>+1</timezone>
     </contributor>
   </contributors>
-  <licenses>
-    <license>
-      <name>The MIT License</name>
-      <url>LICENSE.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-changes-plugin</artifactId>
-          <version>${changesPluginVersion}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>2.8</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.3</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>2.7</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    <plugins>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <skip>false</skip>
-          <excludes>
-            <exclude>**/test-project/**/*.java</exclude>
-            <exclude>
-              **/parent-child-test-project/**/*.java
-            </exclude>
-            <exclude>**/AbstractAjcMojoTest.java</exclude>
-          </excludes>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-invoker-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>integration-test</id>
-            <goals>
-              <goal>install</goal>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <projectsDirectory>src/it</projectsDirectory>
-          <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
-          <postBuildHookScript>verify</postBuildHookScript>
-          <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
-          <goals>
-            <goal>clean</goal>
-            <goal>test</goal>
-          </goals>
-          <settingsFile>src/it/settings.xml</settingsFile>
-          <debug>true</debug>
-        </configuration>
-      </plugin>
-
-      <!--
-        Provides PlantUML integration into site deployments.
-      -->
-      <plugin>
-        <groupId>com.github.jeluard</groupId>
-        <artifactId>plantuml-maven-plugin</artifactId>
-        <version>7954</version>
-        <configuration>
-          <sourceFiles>
-            <directory>${basedir}</directory>
-            <includes>
-              <include>src/site/**/*.puml</include>
-            </includes>
-          </sourceFiles>
-          <outputDirectory>${project.build.directory}/site/images/plantuml</outputDirectory>
-        </configuration>
-        <executions>
-          <execution>
-            <id>generate-plantuml-diagrams</id>
-            <goals>
-              <goal>generate</goal>
-            </goals>
-            <phase>pre-site</phase>
-          </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>net.sourceforge.plantuml</groupId>
-            <artifactId>plantuml</artifactId>
-            <version>7985</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-    </plugins>
-  </build>
-
-  <profiles>
-    <!--
-      The AspectJ compilation requires that tools.jar (or its equivalent for some JDKs) is found on the classpath.
-      The profiles named [something]toolsJar-profile define the systemPath for the tools.jar dependency.
-    -->
-    <profile>
-      <id>standardToolsJar-profile</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-        <file>
-          <exists>${java.home}/../lib/tools.jar</exists>
-        </file>
-      </activation>
-      <properties>
-        <toolsjarSystemPath>${java.home}/../lib/tools.jar</toolsjarSystemPath>
-      </properties>
-    </profile>
-    <profile>
-      <id>appleJdkToolsJar-profile</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-        <file>
-          <exists>${java.home}/../Classes/classes.jar</exists>
-        </file>
-      </activation>
-      <properties>
-        <toolsjarSystemPath>${java.home}/../Classes/classes.jar</toolsjarSystemPath>
-      </properties>
-    </profile>
-
-    <profile>
-      <id>maven-repo-local</id>
-      <activation>
-        <property>
-          <name>maven.repo.local</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <systemProperties>
-                <property>
-                  <!-- Pass this through to the tests (if set!) to have them
-                    pick the right repository -->
-                  <name>maven.repo.local</name>
-                  <value>${maven.repo.local}</value>
-                </property>
-              </systemProperties>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 
   <dependencies>
     <!-- Maven core -->
@@ -342,6 +188,105 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-changes-plugin</artifactId>
+          <version>${changesPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.8</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.3</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
+          <version>2.7</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <skip>false</skip>
+          <excludes>
+            <exclude>**/test-project/**/*.java</exclude>
+            <exclude>**/parent-child-test-project/**/*.java</exclude>
+            <exclude>**/AbstractAjcMojoTest.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-invoker-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>integration-test</id>
+            <goals>
+              <goal>install</goal>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <projectsDirectory>src/it</projectsDirectory>
+          <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
+          <postBuildHookScript>verify</postBuildHookScript>
+          <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
+          <goals>
+            <goal>clean</goal>
+            <goal>test</goal>
+          </goals>
+          <settingsFile>src/it/settings.xml</settingsFile>
+          <debug>true</debug>
+        </configuration>
+      </plugin>
+
+      <!--
+        Provides PlantUML integration into site deployments.
+      -->
+      <plugin>
+        <groupId>com.github.jeluard</groupId>
+        <artifactId>plantuml-maven-plugin</artifactId>
+        <version>7954</version>
+        <configuration>
+          <sourceFiles>
+            <directory>${basedir}</directory>
+            <includes>
+              <include>src/site/**/*.puml</include>
+            </includes>
+          </sourceFiles>
+          <outputDirectory>${project.build.directory}/site/images/plantuml</outputDirectory>
+        </configuration>
+        <executions>
+          <execution>
+            <id>generate-plantuml-diagrams</id>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <phase>pre-site</phase>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>net.sourceforge.plantuml</groupId>
+            <artifactId>plantuml</artifactId>
+            <version>7985</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>
+  </build>
+
   <reporting>
     <plugins>
       <plugin>
@@ -401,4 +346,61 @@
       </plugin>
     </plugins>
   </reporting>
+
+  <profiles>
+    <!--
+      The AspectJ compilation requires that tools.jar (or its equivalent for some JDKs) is found on the classpath.
+      The profiles named [something]toolsJar-profile define the systemPath for the tools.jar dependency.
+    -->
+    <profile>
+      <id>standardToolsJar-profile</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+        <file>
+          <exists>${java.home}/../lib/tools.jar</exists>
+        </file>
+      </activation>
+      <properties>
+        <toolsjarSystemPath>${java.home}/../lib/tools.jar</toolsjarSystemPath>
+      </properties>
+    </profile>
+    <profile>
+      <id>appleJdkToolsJar-profile</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+        <file>
+          <exists>${java.home}/../Classes/classes.jar</exists>
+        </file>
+      </activation>
+      <properties>
+        <toolsjarSystemPath>${java.home}/../Classes/classes.jar</toolsjarSystemPath>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>maven-repo-local</id>
+      <activation>
+        <property>
+          <name>maven.repo.local</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <systemProperties>
+                <property>
+                  <!-- Pass this through to the tests (if set!) to have them
+                    pick the right repository -->
+                  <name>maven.repo.local</name>
+                  <value>${maven.repo.local}</value>
+                </property>
+              </systemProperties>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
